rust-regex-dsl_derive/tests/ui/number_regex.stderr
error: expected string literal
 --> tests/ui/number_regex.rs:4:24
  |
4 |     let regex = regex!(122);
  |                        ^^^
